# autoscroll-x11

./: .gitignore  README.md  pyproject.toml  requirements.txt
autoscroll_x11/: __init__.py  __main__.py  app.py  config.py  logging_setup.py
autoscroll_x11/core/: input_monitor.py  motion_model.py  scroll_engine.py  state.py
autoscroll_x11/platform/: __init__.py  x11.py
autoscroll_x11/ui/: overlay.py  tray.py
data/applications/: autoscroll-x11.desktop
data/autostart/: autoscroll-x11.desktop
debian/: autoscroll-x11.1  autoscroll-x11.install  autoscroll-x11.links  changelog  control  copyright  debhelper-build-stamp  files  manpages  postinst  prerm  rules
debian/autoscroll-x11/DEBIAN/: conffiles  control  md5sums
debian/autoscroll-x11/usr/lib/autoscroll-x11/scroll_core/: __main__.py  config.py
debian/autoscroll-x11/usr/lib/autoscroll-x11/scroll_core/engine/: motion_model.py  scroll_engine.py
debian/autoscroll-x11/usr/share/applications/: autoscroll-x11.desktop
debian/autoscroll-x11/usr/share/doc/autoscroll-x11/: README.md  copyright
docs/: ARCHITECTURE.md  PACKAGING.md  ROADMAP.md
scripts/: build-deb.sh  dev-reinstall.sh  install-local.sh  lint-fix.sh  lint.sh  run-dev.sh
scroll_core/: __init__.py  app.py  logging_setup.py
scroll_core/engine/: motion_model.py  scroll_engine.py
scroll_core/input/: input_monitor.py
scroll_core/platform/: wm.py
scroll_core/ui/: indicator.py  overlay.py  tray.py
tests/: scroll_test_box.py  test_cli.py  test_motion_model.py  test_overlay_direction.py  test_scroll_engine.py  test_state.py
(+2 files in other folders)
